Fix reference docs to match canonical API
reference/implementation.mdx:
- Fix storage access: ctx.model() not storage(ctx)
- Fix Map API: get(&key) not get(ctx, &key)
- Fix Error: Document Error::Message variant, remove Error::new

reference/testing.mdx:
- Fix test attribute: #[testlib::test] not #[tokio::test]
- Fix runtime: Auto-injected, not Runtime::new()
- Remove contract_bytes/dep_contract_bytes (outdated)
- Update interface! documentation

architecture.mdx:
- Fix rollback semantics: ENTIRE call chain rolls back on error
- Remove incorrect "partial rollback" statement
- Now consistent with error-handling guide

--- a/docs/sigil/architecture.mdx
+++ b/docs/sigil/architecture.mdx
@@ -88,7 +88,7 @@ Sigil provides a robust error handling mechanism:
 - **Error Propagation**: Errors can be propagated up the call stack using the `?` operator.
 - **Error Handling**: `Result`s can be handled using `match` expressions over `Ok` and `Err` variants or with the many other error handling strategies available in Rust.
 
-When a function returns an `Err` or `panic`s, all storage changes within that contract's storage are rolled back. In nested cross-contract calls, an `Err` from the called contract rolls back only its own storage changes, leaving the calling contract's storage updates intact unless it also returns an `Err` (i.e. propagating the error up the call stack). This mechanism provides contract authors with fine-grained control over error handling and storage state management. However, a panic anywhere in the call stack triggers a full rollback, rolling back all storage changes across all contracts in the execution.
+When a function returns an `Err` or `panic`s, all storage changes are rolled back. For nested calls, the entire call chain is rolled back if any function errors. This means if Contract A calls Contract B and B returns an error, ALL storage changes in both A and B are rolled back—the entire transaction has no effect. A transaction either completes fully with all storage changes persisted, or fails entirely with no storage changes.
 
 ### Safety
 
