Fix documentation consistency issues
- Fix numerics reference: sqrt() is for Integer, log10() is for Decimal
- Fix pool.mdx: Remove incorrect ctx parameters from storage API calls
- Fix pool.mdx & amm.mdx: Correct runtime parameter usage (remove & prefix)
- Align all examples with actual source code behavior

--- a/docs/sigil/reference/numerics.mdx
+++ b/docs/sigil/reference/numerics.mdx
@@ -33,4 +33,4 @@ match a.add(b) {
 
 ## Advanced operations
 
-Currently a `.sqrt()` method for for `Decimal` and a `.log10()` method for `Integer` exist. We will continue to expand the range of operations supported by these types.
+Currently a `.sqrt()` method for `Integer` and a `.log10()` method for `Decimal` exist. We will continue to expand the range of operations supported by these types.
