--- a/docs/sigil/examples/amm.mdx
+++ b/docs/sigil/examples/amm.mdx
@@ -493,18 +493,18 @@ mod tests {
 
         let admin = "test_admin";
         let minter = "test_minter";
-        token_a::mint(&runtime, minter, 1000.into()).await?;
-        token_b::mint(&runtime, minter, 1000.into()).await?;
+        token_a::mint(runtime, minter, 1000.into()).await?;
+        token_b::mint(runtime, minter, 1000.into()).await?;
 
-        token_a::transfer(&runtime, minter, admin, 100.into()).await??;
-        token_b::transfer(&runtime, minter, admin, 500.into()).await??;
+        token_a::transfer(runtime, minter, admin, 100.into()).await??;
+        token_b::transfer(runtime, minter, admin, 500.into()).await??;
 
         let pair = amm::TokenPair {
             a: token_a.clone(),
             b: token_b.clone(),
         };
         let res = amm::create(
-            &runtime,
+            runtime,
             admin,
             pair.clone(),
             100.into(),
@@ -514,23 +514,23 @@ mod tests {
         .await?;
         assert_eq!(res, Ok(223.into()));
 
-        let bal_a = amm::token_balance(&runtime, pair.clone(), token_a.clone()).await?;
+        let bal_a = amm::token_balance(runtime, pair.clone(), token_a.clone()).await?;
         assert_eq!(bal_a, Ok(100.into()));
-        let bal_b = amm::token_balance(&runtime, pair.clone(), token_b.clone()).await?;
+        let bal_b = amm::token_balance(runtime, pair.clone(), token_b.clone()).await?;
         assert_eq!(bal_b, Ok(500.into()));
         let k1 = bal_a.unwrap() * bal_b.unwrap();
 
-        let res = amm::quote_swap(&runtime, pair.clone(), token_a.clone(), 10.into()).await?;
+        let res = amm::quote_swap(runtime, pair.clone(), token_a.clone(), 10.into()).await?;
         assert_eq!(res, Ok(45.into()));
 
-        let res = amm::quote_swap(&runtime, pair.clone(), token_a.clone(), 100.into()).await?;
+        let res = amm::quote_swap(runtime, pair.clone(), token_a.clone(), 100.into()).await?;
         assert_eq!(res, Ok(250.into()));
 
-        let res = amm::quote_swap(&runtime, pair.clone(), token_a.clone(), 1000.into()).await?;
+        let res = amm::quote_swap(runtime, pair.clone(), token_a.clone(), 1000.into()).await?;
         assert_eq!(res, Ok(454.into()));
 
         let res = amm::swap(
-            &runtime,
+            runtime,
             minter,
             pair.clone(),
             token_a.clone(),
@@ -541,7 +541,7 @@ mod tests {
         assert!(res.is_err()); // below minimum
 
         let res = amm::swap(
-            &runtime,
+            runtime,
             minter,
             pair.clone(),
             token_a.clone(),
@@ -551,15 +551,15 @@ mod tests {
         .await?;
         assert_eq!(res, Ok(45.into()));
 
-        let bal_a = amm::token_balance(&runtime, pair.clone(), token_a.clone()).await?;
-        let bal_b = amm::token_balance(&runtime, pair.clone(), token_b.clone()).await?;
+        let bal_a = amm::token_balance(runtime, pair.clone(), token_a.clone()).await?;
+        let bal_b = amm::token_balance(runtime, pair.clone(), token_b.clone()).await?;
         let k2 = bal_a.unwrap() * bal_b.unwrap();
         assert!(k2 >= k1);
 
-        let res = amm::quote_swap(&runtime, pair.clone(), token_b.clone(), 45.into()).await?;
+        let res = amm::quote_swap(runtime, pair.clone(), token_b.clone(), 45.into()).await?;
         assert_eq!(res, Ok(9.into()));
         let res = amm::swap(
-            &runtime,
+            runtime,
             minter,
             pair.clone(),
             token_b.clone(),
@@ -569,8 +569,8 @@ mod tests {
         .await?;
         assert_eq!(res, Ok(9.into()));
 
-        let bal_a = amm::token_balance(&runtime, pair.clone(), token_a.clone()).await?;
-        let bal_b = amm::token_balance(&runtime, pair.clone(), token_b.clone()).await?;
+        let bal_a = amm::token_balance(runtime, pair.clone(), token_a.clone()).await?;
+        let bal_b = amm::token_balance(runtime, pair.clone(), token_b.clone()).await?;
         let k3 = bal_a.unwrap() * bal_b.unwrap();
         assert!(k3 >= k2);
 
