--- a/docs/sigil/examples/pool.mdx
+++ b/docs/sigil/examples/pool.mdx
@@ -106,8 +106,8 @@ impl PoolStorage {
 }
 
 fn token_out(ctx: &impl ReadContext, token_in: &ContractAddress) -> Result<ContractAddress, Error> {
-    let token_a = ctx.model().token_a(ctx);
-    let token_b = ctx.model().token_b(ctx);
+    let token_a = ctx.model().token_a();
+    let token_b = ctx.model().token_b();
     if token_in == &token_a {
         Ok(token_b)
     } else if token_in == &token_b {
@@ -152,10 +152,10 @@ fn quote_swap(
     token_in: &ContractAddress,
     amount_in: Integer,
 ) -> Result<Integer, Error> {
-    let custodian = ctx.model().custodian(ctx);
+    let custodian = ctx.model().custodian();
     let bal_in = token_dyn::balance(token_in, &custodian).unwrap_or_default();
     let bal_out = token_dyn::balance(&token_out(ctx, token_in)?, &custodian).unwrap_or_default();
-    calc_swap_result(amount_in, bal_in, bal_out, ctx.model().fee_bps(ctx))
+    calc_swap_result(amount_in, bal_in, bal_out, ctx.model().fee_bps())
 }
 
 fn quote_deposit(
@@ -166,11 +166,11 @@ fn quote_deposit(
     validate_amount(amount_a)?;
     validate_amount(amount_b)?;
 
-    let token_a = ctx.model().token_a(ctx);
-    let token_b = ctx.model().token_b(ctx);
-    let lp_supply = ctx.model().lp_total_supply(ctx);
+    let token_a = ctx.model().token_a();
+    let token_b = ctx.model().token_b();
+    let lp_supply = ctx.model().lp_total_supply();
 
-    let custodian = ctx.model().custodian(ctx);
+    let custodian = ctx.model().custodian();
     let bal_a = token_dyn::balance(&token_a, &custodian).unwrap_or_default();
     let bal_b = token_dyn::balance(&token_b, &custodian).unwrap_or_default();
 
@@ -191,11 +191,11 @@ fn quote_deposit(
 fn quote_withdraw(ctx: &impl ReadContext, shares: Integer) -> Result<WithdrawResult, Error> {
     validate_amount(shares)?;
 
-    let token_a = ctx.model().token_a(ctx);
-    let token_b = ctx.model().token_b(ctx);
-    let lp_supply = ctx.model().lp_total_supply(ctx);
+    let token_a = ctx.model().token_a();
+    let token_b = ctx.model().token_b();
+    let lp_supply = ctx.model().lp_total_supply();
 
-    let custodian = ctx.model().custodian(ctx);
+    let custodian = ctx.model().custodian();
     let bal_a = token_dyn::balance(&token_a, &custodian).unwrap_or_default();
     let bal_b = token_dyn::balance(&token_b, &custodian).unwrap_or_default();
 
@@ -238,35 +238,35 @@ impl Guest for Pool {
         fee: Integer,
     ) -> Result<Integer, Error> {
         PoolStorage::new(ctx, token_a, amount_a, token_b, amount_b, fee)?.init(ctx);
-        Ok(ctx.model().lp_total_supply(ctx))
+        Ok(ctx.model().lp_total_supply())
     }
 
     fn fee(ctx: &ViewContext) -> Integer {
-        ctx.model().fee_bps(ctx)
+        ctx.model().fee_bps()
     }
 
     fn balance(ctx: &ViewContext, acc: String) -> Option<Integer> {
-        ctx.model().lp_ledger().get(ctx, acc)
+        ctx.model().lp_ledger().get(acc)
     }
 
     fn transfer(ctx: &ProcContext, to: String, n: Integer) -> Result<(), Error> {
         let from = ctx.signer().to_string();
         let ledger = ctx.model().lp_ledger();
 
-        let from_balance = ledger.get(ctx, &from).unwrap_or_default();
-        let to_balance = ledger.get(ctx, &to).unwrap_or_default();
+        let from_balance = ledger.get(&from).unwrap_or_default();
+        let to_balance = ledger.get(&to).unwrap_or_default();
         if from_balance < n {
             return Err(Error::Message("insufficient funds".to_string()));
         }
 
-        ledger.set(ctx, from, from_balance - n);
-        ledger.set(ctx, to, to_balance + n);
+        ledger.set(from, from_balance - n);
+        ledger.set(to, to_balance + n);
         Ok(())
     }
 
     fn token_balance(ctx: &ViewContext, token: ContractAddress) -> Result<Integer, Error> {
         token_out(ctx, &token)?;
-        Ok(token_dyn::balance(&token, &ctx.model().custodian(ctx)).unwrap_or_default())
+        Ok(token_dyn::balance(&token, &ctx.model().custodian()).unwrap_or_default())
     }
 
     fn quote_deposit(
@@ -284,21 +284,21 @@ impl Guest for Pool {
     ) -> Result<DepositResult, Error> {
         let res = quote_deposit(ctx, amount_a, amount_b)?;
         let ledger = ctx.model().lp_ledger();
-        let custodian = ctx.model().custodian(ctx);
+        let custodian = ctx.model().custodian();
 
         let user = ctx.signer().to_string();
-        let bal = ledger.get(ctx, &user).unwrap_or_default();
-        ledger.set(ctx, user, bal + res.lp_shares);
-        ctx.model().set_lp_total_supply(ctx, ctx.model().lp_total_supply(ctx) + res.lp_shares);
+        let bal = ledger.get(&user).unwrap_or_default();
+        ledger.set(user, bal + res.lp_shares);
+        ctx.model().set_lp_total_supply(ctx.model().lp_total_supply() + res.lp_shares);
 
         token_dyn::transfer(
-            &ctx.model().token_a(ctx),
+            &ctx.model().token_a(),
             ctx.signer(),
             &custodian,
             res.deposit_a,
         )?;
         token_dyn::transfer(
-            &ctx.model().token_b(ctx),
+            &ctx.model().token_b(),
             ctx.signer(),
             &custodian,
             res.deposit_b,
@@ -317,8 +317,8 @@ impl Guest for Pool {
         let ledger = ctx.model().lp_ledger();
         let user = ctx.signer().to_string();
 
-        let total = ctx.model().lp_total_supply(ctx);
-        let bal = ledger.get(ctx, &user).unwrap_or_default();
+        let total = ctx.model().lp_total_supply();
+        let bal = ledger.get(&user).unwrap_or_default();
 
         if total < shares {
             return Err(Error::Message("insufficient total supply".to_string()));
@@ -327,17 +327,17 @@ impl Guest for Pool {
             return Err(Error::Message("insufficient share balance".to_string()));
         }
 
-        ledger.set(ctx, user.clone(), bal - shares);
-        ctx.model().set_lp_total_supply(ctx, total - shares);
+        ledger.set(user.clone(), bal - shares);
+        ctx.model().set_lp_total_supply(total - shares);
 
         token_dyn::transfer(
-            &ctx.model().token_a(ctx),
+            &ctx.model().token_a(),
             ctx.contract_signer(),
             &user,
             res.amount_a,
         )?;
         token_dyn::transfer(
-            &ctx.model().token_b(ctx),
+            &ctx.model().token_b(),
             ctx.contract_signer(),
             &user,
             res.amount_b,
@@ -373,7 +373,7 @@ impl Guest for Pool {
         token_dyn::transfer(
             &token_in,
             ctx.signer(),
-            &ctx.model().custodian(ctx),
+            &ctx.model().custodian(),
             amount_in,
         )?;
         token_dyn::transfer(
@@ -428,53 +428,53 @@ mod tests {
         .await?;
         assert_eq!(res, Ok(223.into()));
 
-        let bal_a = pool::token_balance(&runtime, token_a.clone()).await?;
+        let bal_a = pool::token_balance(runtime, &pool, token_a.clone()).await?;
         assert_eq!(bal_a, Ok(100.into()));
-        let bal_b = pool::token_balance(&runtime, token_b.clone()).await?;
+        let bal_b = pool::token_balance(runtime, &pool, token_b.clone()).await?;
         assert_eq!(bal_b, Ok(500.into()));
         let k1 = bal_a.unwrap() * bal_b.unwrap();
 
-        let res = pool::quote_swap(&runtime, token_a.clone(), 10.into()).await?;
+        let res = pool::quote_swap(runtime, &pool, token_a.clone(), 10.into()).await?;
         assert_eq!(res, Ok(45.into()));
 
-        let res = pool::quote_swap(&runtime, token_a.clone(), 100.into()).await?;
+        let res = pool::quote_swap(runtime, &pool, token_a.clone(), 100.into()).await?;
         assert_eq!(res, Ok(250.into()));
 
-        let res = pool::quote_swap(&runtime, token_a.clone(), 1000.into()).await?;
+        let res = pool::quote_swap(runtime, &pool, token_a.clone(), 1000.into()).await?;
         assert_eq!(res, Ok(454.into()));
 
-        let res = pool::swap(&runtime, minter, token_a.clone(), 10.into(), 46.into()).await?;
+        let res = pool::swap(runtime, &pool, &minter, token_a.clone(), 10.into(), 46.into()).await?;
         assert!(res.is_err()); // below minimum
 
-        let res = pool::swap(&runtime, minter, token_a.clone(), 10.into(), 45.into()).await?;
+        let res = pool::swap(runtime, &pool, &minter, token_a.clone(), 10.into(), 45.into()).await?;
         assert_eq!(res, Ok(45.into()));
 
-        let bal_a = pool::token_balance(&runtime, token_a.clone()).await?;
-        let bal_b = pool::token_balance(&runtime, token_b.clone()).await?;
+        let bal_a = pool::token_balance(runtime, &pool, token_a.clone()).await?;
+        let bal_b = pool::token_balance(runtime, &pool, token_b.clone()).await?;
         let k2 = bal_a.unwrap() * bal_b.unwrap();
         assert!(k2 >= k1);
 
-        let res = pool::quote_swap(&runtime, token_b.clone(), 45.into()).await?;
+        let res = pool::quote_swap(runtime, &pool, token_b.clone(), 45.into()).await?;
         assert_eq!(res, Ok(9.into()));
-        let res = pool::swap(&runtime, minter, token_b.clone(), 45.into(), 0.into()).await?;
+        let res = pool::swap(runtime, &pool, &minter, token_b.clone(), 45.into(), 0.into()).await?;
         assert_eq!(res, Ok(9.into()));
 
-        let bal_a = pool::token_balance(&runtime, token_a.clone()).await?;
-        let bal_b = pool::token_balance(&runtime, token_b.clone()).await?;
+        let bal_a = pool::token_balance(runtime, &pool, token_a.clone()).await?;
+        let bal_b = pool::token_balance(runtime, &pool, token_b.clone()).await?;
         let k3 = bal_a.unwrap() * bal_b.unwrap();
         assert!(k3 >= k2);
 
         // use token interface to transfer shares
-        let res = token_dyn::balance(&runtime, &pool_address, admin).await?;
+        let res = token_dyn::balance(runtime, &pool, &admin).await?;
         assert_eq!(res, Some(223.into()));
-        let res = token_dyn::balance(&runtime, &pool_address, minter).await?;
+        let res = token_dyn::balance(runtime, &pool, &minter).await?;
         assert_eq!(res, None);
 
-        token_dyn::transfer(&runtime, &pool_address, admin, minter, 23.into()).await??;
+        token_dyn::transfer(runtime, &pool, &admin, &minter, 23.into()).await??;
 
-        let res = token_dyn::balance(&runtime, &pool_address, admin).await?;
+        let res = token_dyn::balance(runtime, &pool, &admin).await?;
         assert_eq!(res, Some(200.into()));
-        let res = token_dyn::balance(&runtime, &pool_address, minter).await?;
+        let res = token_dyn::balance(runtime, &pool, &minter).await?;
         assert_eq!(res, Some(23.into()));
 
         Ok(())
