Fix MDX parsing errors with angle brackets
- proxy.mdx: Wrap Option<ContractAddress> in backticks
- error-handling.mdx: Remove <T, Error> from heading (use prose instead)
- storage.mdx: Remove <T> from Vec (just say Vec)

MDX interprets angle brackets as HTML tags, so type parameters
need to be in code blocks or removed from prose.

--- a/docs/sigil/examples/proxy.mdx
+++ b/docs/sigil/examples/proxy.mdx
@@ -74,7 +74,7 @@ impl Guest for Proxy {
 **Key points:**
 - Storage accessed via `ctx.model()` 
 - `fallback` handles missing function calls by forwarding to the target contract
-- Uses `if let Some(...)` to safely handle the Option<ContractAddress>
+- Uses `if let Some(...)` to safely handle the `Option<ContractAddress>`
 - `FallContext` can be converted to ViewContext for read-only access
 - `foreign::call` is the low-level API used by `interface!` and `import!` macros
 
