--- a/docs/sigil/guides/error-handling.mdx
+++ b/docs/sigil/guides/error-handling.mdx
@@ -19,7 +19,7 @@ Defined in `core/indexer/src/runtime/wit/deps/built-in.wit`.
 
 ## When to Use Result vs Panic
 
-### Use Result<T, Error> for:
+### Use Result for Expected Errors
 
 **Expected failure cases:**
 ```rust
