--- a/docs/sigil/guides/storage.mdx
+++ b/docs/sigil/guides/storage.mdx
@@ -77,7 +77,7 @@ Most contracts only need `StorageRoot` and `Storage`.
 
 ### Not Directly Supported
 
-**Vec<T>** - Use `Map<u64, T>` as workaround:
+**Vec** - Use `Map<u64, T>` as workaround:
 
 ```rust
 // Instead of
